# obs_manager

./: .gitignore  LICENSE  README.md  config.yaml  data-download.sh  data-download_mg.sh  obs_manager.py  pyproject.toml
obs_manager_gui/: obs_manager_gui.py
